# ChangeLog for net-print/xfprint
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-print/xfprint/Attic/ChangeLog,v 1.28 2010/07/23 08:03:22 maekke Exp $

  23 Jul 2010; Markus Meier <maekke@gentoo.org> xfprint-4.6.1-r1.ebuild:
  arm stable, bug #323729

  09 Jul 2010; Samuli Suominen <ssuominen@gentoo.org>
  xfprint-4.6.1-r1.ebuild:
  ppc64 stable wrt #323729

  30 Jun 2010; Christian Faulhammer <fauli@gentoo.org>
  xfprint-4.6.1-r1.ebuild:
  x86 stable, bug 323729

  29 Jun 2010; Christoph Mende <angelos@gentoo.org> xfprint-4.6.1-r1.ebuild:
  Stable on amd64 wrt bug #323729

  12 May 2010; Jeremy Olexa <darkside@gentoo.org> xfprint-4.6.1-r1.ebuild:
  Use correct PATCHES syntax

*xfprint-4.6.1-r1 (12 May 2010)

  12 May 2010; Jeremy Olexa <darkside@gentoo.org> +xfprint-4.6.1-r1.ebuild,
  +files/xfprint-4.6.1-xfconf_channel_fix.diff:
  Revision bump with patch to fix CUPS issue. Gentoo bug 278047, patch by
  Bailey Kong

  24 Nov 2009; Jeremy Olexa <darkside@gentoo.org> xfprint-4.6.1.ebuild:
  Add prefix keywords, as tested in prefix overlay

  27 Jul 2009; nixnut <nixnut@gentoo.org> xfprint-4.6.1.ebuild:
  ppc stable #265587

  30 Jun 2009; Tobias Klausmann <klausman@gentoo.org> xfprint-4.6.1.ebuild:
  Stable on alpha, bug #265587

  28 Jun 2009; Brent Baude <ranger@gentoo.org> xfprint-4.6.1.ebuild:
  Marking xfprint-4.6.1 ppc64 stable for bug 265587

  22 Jun 2009; Raúl Porcel <armin76@gentoo.org> xfprint-4.6.1.ebuild:
  arm/ia64 stable wrt #265587

  15 Jun 2009; Jeroen Roovers <jer@gentoo.org> xfprint-4.6.1.ebuild:
  Stable for HPPA (bug #265587).

  13 Jun 2009; Tiago Cunha <tcunha@gentoo.org> xfprint-4.6.1.ebuild:
  stable sparc, bug 265587

  10 Jun 2009; Christian Faulhammer <fauli@gentoo.org> xfprint-4.6.1.ebuild:
  stable x86, bug 265587

  09 Jun 2009; Jeremy Olexa <darkside@gentoo.org> xfprint-4.6.1.ebuild:
  amd64 stable, bug 265587
