@@ -1,6 +1,6 @@
 AUX xfprint-4.6.1-xfconf_channel_fix.diff 1220 RMD160 155df98c0fbbb04c8e5fab776f47b724c819426d SHA1 2091dc8a384d2b20187c764600e16402f067022e SHA256 c3ebdec4a8d5222e1b166c709ec900dd9188e70fa6809abb9b7251d6c39d2b5f
 DIST xfprint-4.6.1.tar.bz2 842675 RMD160 8df81375cbc72eabd95911997210c8fa864bcf0b SHA1 4ce98c49d49b2d4c1a8fb5d76597b8e9ab9a51e8 SHA256 be0cc5d149234c22dee69db5f8cbddebc46bc21a4f96fefdec21df36b2a15f17
-EBUILD xfprint-4.6.1-r1.ebuild 1173 RMD160 fe8b1c3b96b25ed282583370e80c239e89e7b08c SHA1 9db40ab6e6d043629c1d7f25f9f82a52d34ac9e5 SHA256 c1978210df61be034351fb713faf9fc09bfacbe36de10612f916cab1b029d60b
+EBUILD xfprint-4.6.1-r1.ebuild 1246 RMD160 946b7319e07ee219ba9869dbac94acc6c5e5533d SHA1 df1fba7717a76259c1bad912627ed0fad1f820c5 SHA256 68165800b0d425518643b4eef4197757ef3cb9cbb1ea0dbf983b65f14b6996ea
 EBUILD xfprint-4.6.1.ebuild 1034 RMD160 fd666c76e7fb658dd7c5a632a64a0f1a487b21ce SHA1 95db1b803657efff0a4c64bd0e32de833974e9fe SHA256 53cdaf43ddcd2f6f0ea9a0bb981d3cf2556e587b4f4c8280a3e5b2c39708720e
-MISC ChangeLog 16935 RMD160 4199bdf466654ffa826cd30e652eb65466c8cf60 SHA1 052f47399e72eb3a355b96ea2b0ba623074f2c05 SHA256 74147c8ecbbc0eda1f6c78b432043c135e081fac6790abbedfb0fba7732f2906
+MISC ChangeLog 17072 RMD160 3fc5b5fe3f3f6ac72218059549f906ec2c87749c SHA1 62bb465d00d17b8d039ae32e65b12512ccc62595 SHA256 c71f38205081984c6a8daf4101f8f3fdd33fb20f3b7350e6d4b11bdeb441cf0e
 MISC metadata.xml 159 RMD160 43722935bd7b4db7fe8db681054f2e53c4a5f7ce SHA1 15958ad72e234ba572c9534533c21532eb6bc0fd SHA256 900ea49b6703fce452e205b85226bf1f994725963e5840da501182e7487d0e63
