@@ -1,8 +1,8 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-print/xfprint/Attic/xfprint-4.6.1-r1.ebuild,v 1.7 2010/08/07 15:46:29 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-print/xfprint/Attic/xfprint-4.6.1-r1.ebuild,v 1.8 2010/08/07 15:53:22 ssuominen Exp $
 
-EAPI=2
+EAPI=3
 EAUTORECONF=yes
 inherit xfconf
 
@@ -29,9 +29,11 @@ DEPEND="${RDEPEND}
 pkg_setup() {
 	PATCHES=( "${FILESDIR}"/${P}-xfconf_channel_fix.diff )
 	XFCONF="--disable-dependency-tracking
+		--disable-static
 		--enable-bsdlpr
 		$(use_enable cups)
-		$(xfconf_use_debug)"
+		$(xfconf_use_debug)
+		--with-html-dir=${EPREFIX}/usr/share/doc/${PF}/html"
 	DOCS="AUTHORS ChangeLog NEWS README TODO"
 }
 
