@@ -1,6 +1,10 @@
 # ChangeLog for net-print/xfprint
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-print/xfprint/Attic/ChangeLog,v 1.28 2010/07/23 08:03:22 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-print/xfprint/Attic/ChangeLog,v 1.29 2010/08/07 15:53:22 ssuominen Exp $
+
+  07 Aug 2010; Samuli Suominen <ssuominen@gentoo.org>
+  xfprint-4.6.1-r1.ebuild:
+  Fix missing --with-html-dir and --disable-static.
 
   23 Jul 2010; Markus Meier <maekke@gentoo.org> xfprint-4.6.1-r1.ebuild:
   arm stable, bug #323729
